--- a/demo/src/components/Tree.css
+++ b/demo/src/components/Tree.css
@@ -1,5 +1,4 @@
 .tree {
-  overflow: scroll;
   height: 100%;
 }
 
